<resources>
    <string name="app_name">My Calories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_product">Add new product</string>
    <string name="name">Name:</string>
    <string name="button_save">Save</string>
    <string name="product_not_saved">Product not saved!</string>
    <string name="title_product">Products</string>
    <string name="calories_count">Calories count:</string>
    <string name="description">Description:</string>
    <string name="calorie_count">Calorie count:</string>
    <string name="add_new_product">Add new product</string>
    <string name="count">Count:</string>
    <string name="product_name">Product name:</string>
    <string name="caloric_content">Caloric content:</string>
    <string name="add_new_eaten_food">Add new Eaten food</string>
    <string name="eaten_food_not_added">Eaten food not added!</string>
    <string name="title_today">Today</string>
    <string name="title_all_eaten_food">All</string>
    <string name="calories_eaten_today">Calories Eaten Today:</string>
</resources>