<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_product">

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.g1a6iator.mycalories.ui.product.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.g1a6iator.mycalories.ui.today_eaten_food.TodayEatenFoodFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today_eaten_food" />

    <fragment
        android:id="@+id/navigation_all_eaten_food"
        android:name="com.g1a6iator.mycalories.ui.all_eaten_food.AllEatenFoodFragment"
        android:label="@string/title_all_eaten_food"
        tools:layout="@layout/fragment_all_eaten_food" />
</navigation>